Prevent right side clipping of prompt

--- a/app/assets/stylesheets/lexxy-editor.css
+++ b/app/assets/stylesheets/lexxy-editor.css
@@ -819,8 +819,10 @@
 
 :where(.lexxy-prompt-menu) {
   --lexxy-prompt-avatar-size: 24px;
-  --lexxy-prompt-min-width: 20ch;
   --lexxy-prompt-padding: 0.5ch;
+
+  --lexxy-prompt-offset-x: 0;
+  --lexxy-prompt-offset-y: 0;
 
   background-color: var(--lexxy-color-canvas);
   border-radius: calc(var(--lexxy-prompt-padding) * 2);
@@ -829,13 +831,27 @@
   font-family: var(--lexxy-font-base);
   font-size: var(--lexxy-text-small);
   list-style: none;
+  inset-block-start: var(--lexxy-prompt-offset-y);
+  inset-inline-start: var(--lexxy-prompt-offset-x);
   margin: 0;
   max-block-size: 200px;
-  min-inline-size: var(--lexxy-prompt-min-width);
+  max-inline-size: min(20ch, calc(100% - var(--lexxy-prompt-offset-x)));
+  min-inline-size: 20ch;
   overflow: auto;
   padding: var(--lexxy-prompt-padding);
+  position: absolute;
   visibility: hidden;
   z-index: var(--lexxy-z-popup);
+
+  &[data-clipped-at-right] {
+    inset-inline-start: unset;
+    inset-inline-end: 1ch;
+  }
+
+  &[data-clipped-at-bottom] {
+    inset-block-start: unset;
+    inset-block-end: var(--lexxy-prompt-offset-y);
+  }
 }
 
 :where(.lexxy-prompt-menu--visible) {
@@ -849,7 +865,6 @@
   display: flex;
   gap: var(--lexxy-prompt-padding);
   padding: var(--lexxy-prompt-padding);
-  white-space: nowrap;
 
   &:hover {
     background-color: var(--lexxy-color-ink-lightest);
